# MotionPNGTuber

./: .gitignore  LICENSE  README.ja.md  README.md  analyze_landmarks.py  audio_linux.py  auto_mouth_track_v2.py  calibrate_mouth_track.py  convert_npz_to_json.py  face_track_anime_detector.py  hello.py  lipsync_core.py  loop_lipsync_runtime_patched_emotion_auto.py  mouth_erase_tuner_gui.py  mouth_sprite_extractor.py  mouth_sprite_extractor_gui.py  mouth_track_gui.py  multi_video_live_gui.py  pyproject.macos.toml  pyproject.toml
mouth_track_gui/: actions.py  app.py
tests/: test_auto_mouth_track_v2.py  test_face_track_anime_detector.py  test_mouth_track_actions.py  test_mouth_track_app.py
