[project]
name = "motionpngtuber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dghs-imgutils>=0.4.6",
    "onnxruntime",
    "mmdet>=3.3.0",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "openmim>=0.3.9",
    "pillow>=12.1.0",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
]
