[project]
name = "motionpngtuber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mmdet>=3.3.0",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "openmim>=0.3.9",
    "pillow>=12.1.0",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "dghs-imgutils[gpu]>=0.19.0",
    "nvidia-cudnn-cu12>=9.17.1.4",
    "nvidia-cublas-cu12>=12.9.1.4",
    "onnxruntime-gpu>=1.23.2",
]
